Keyboard pushes elements out of view issue

--- a/src/app/post-a-job-add/post-a-job-add.page.scss
+++ b/src/app/post-a-job-add/post-a-job-add.page.scss
@@ -462,6 +462,8 @@ ion-content {
         bottom: 0px;
         left: 0px;
         right: 0px;
+        --border: 0px !important;
+        border: 0px !important;
         // border-radius: 0px 0px 35px 35px;
         // background-color: #f8f8f8;
         ion-grid {
