--- a/src/global.scss
+++ b/src/global.scss
@@ -722,3 +722,19 @@ app-home {
         }
     }
 }
+
+// below-css-Keyboard-pushes-elements-out-of-view-for
+.scroll-content {
+    --padding-end: 0px !important;
+    padding-inline-end: 0px !important;
+    padding-bottom: 0 !important;
+}
+// app-post-a-job-add {
+//     .inner-scroll, .scroll-content {
+//         --padding-end: 0px !important;
+//         padding-inline-end: 0px !important;
+//         padding-bottom: 0 !important;
+//     }
+// }
+
+// above-css-Keyboard-pushes-elements-out-of-view-for
